# rust_learn2earn

./: .env  .gitignore  Cargo.toml  Readme.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: LoginPage.jsx  Navbar.jsx  ProfilePage.jsx  ProtectedRoute.jsx  TaskForm.jsx  TaskList.jsx  TaskSubmissions.jsx  TransferPage.jsx
frontend/src/components/dialogs/: ApproveDialog.jsx  RejectDialog.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/hooks/: useTasks.js
frontend/src/services/: api.js
sql/: rust-learn2learn.sql
src/: main.rs
src/config/: settings.rs
src/controllers/: auth_controller.rs  mod.rs  task_controller.rs  task_submission_controller.rs
src/database/: connection.rs
src/middleware/: auth.rs
src/models/: mod.rs  task.rs  task_submission.rs  user.rs
src/routes/: auth_routes.rs  mod.rs  task_routes.rs  task_submission_routes.rs
src/services/: auth_service.rs  mod.rs  task_service.rs  task_submission_service.rs
src/utils/: jwt.rs
task-frontend/: package-lock.json  package.json
task-frontend/src/: App.jsx
task-frontend/src/components/: TaskEdit.jsx  TaskForm.css  TaskForm.jsx  TaskList.css  TaskList.jsx
task-frontend/src/services/: api.js
