[package]
name = "rust_learn2earn"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.10"
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
actix-web-httpauth = "0.8"
bigdecimal = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1.0.99"
futures-util = "0.3.31"
